--- a/index.html
+++ b/index.html
@@ -21,15 +21,19 @@
                     <input type="text" id="form-author" name="form-author" placeholder="Firstname Lastname" required>
                     <label for="form-pages">Number of Pages:</label>
                     <input type="number" id="form-pages" name="form-pages" style="width: 50px" placeholder="0">
-                    <label for="form-read">Have You Read It? If Yes:</label>
-                    <input type="checkbox" id="form-read" name="form-read">
-                    <input type="reset" class="button">
-                    <input type="submit" class="button" value="Submit">
+                    <label for="form-read">Have You Read It?</label>
+                    <select name="read" id="form-read">
+                        <option value="not read yet">No</option>
+                        <option value="have read">Yes</option>
+                    </select>
+                    <input type="submit" class="button" id="submit" name="submit">
                 </fieldset>
             </form>
         </div>
     </div>
     <div id="container"></div>
+    <br>
+    <div id="footer">Click <img style='display:inline;' height='15px' width='15px' src='images/green-check.png'/> when you have finished reading the book. Click <img style='display:inline;' height='15px' width='15px' src='images/red-x.png'/> to remove the book from your library.</div>
 
 <script src="script.js"></script>
 
