--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
                 <fieldset>
                     <legend><b>Add A New Book</b></legend>
                     <label for="form-title">Title:</label>
-                    <input type="text" id="form-title" name="form-title" placeholder="Full Title" required>
-                    <label for="form-author">Author:</label>
-                    <input type="text" id="form-author" name="form-author" placeholder="Firstname Lastname" required>
+                    <input type="text" id="form-title" name="form-title" required>
+                    <label for="form-author">Author: (Firstname Lastname)</label>
+                    <input type="text" id="form-author" name="form-author" required>
                     <label for="form-pages">Number of Pages:</label>
-                    <input type="number" id="form-pages" name="form-pages" style="width: 50px" placeholder="0">
+                    <input type="number" id="form-pages" name="form-pages" style="width: 50px" required>
                     <label for="form-read">Have You Read It?</label>
-                    <select name="read" id="form-read">
+                    <select name="read" id="form-read" required>
                         <option value="not read yet">No</option>
                         <option value="have read">Yes</option>
                     </select>
-                    <input type="submit" class="button" id="submit" name="submit">
+                    <button id="submit">Submit</button>
                 </fieldset>
             </form>
         </div>
